chase bugs around z-index not rendering scroll correctly

--- a/client/src/components/Inbox/Inbox.css
+++ b/client/src/components/Inbox/Inbox.css
@@ -3,10 +3,8 @@
   box-shadow: -5px 5px 7px rgba(37, 37, 37, 0.4);
   /* need to work on width and height... */
   width: 400px;
-  height: 600px;
-
-  position: absolute;
-  z-index: -100;
+  height: fit-content;
+  /* need to work on position, but quick fix for now to get all the profile pictures to display above the background (they are at z-index -1 and -2) */
 }
 .Inbox__header {
   border-bottom: 1px solid rgba(37, 37, 37, 0.25);
@@ -24,4 +22,8 @@
   padding: 15px 24px;
   color: var(--black);
   font-family: var(--default-font);
+}
+.Inbox__message-previews {
+  height: 500px;
+  overflow-y: scroll;
 }
